# kavi

./: .gitignore  CLAUDE.md  README.md  inital_plan.md  pyproject.toml
.claude/agents/: advisor.md  forge-reviewer.md
.claude/skills/session-end/: SKILL.md
.claude/skills/session-start/: SKILL.md
docs/: ARCHITECTURE.md  decisions.md
src/kavi/: __init__.py  cli.py  config.py
src/kavi/agent/: __init__.py  constants.py  core.py  models.py  parser.py  planner.py  presenter.py  resolver.py  skills_index.py
src/kavi/artifacts/: __init__.py  writer.py
src/kavi/consumer/: __init__.py  chain.py  log.py  replay.py  session.py  shim.py
src/kavi/forge/: __init__.py  build.py  invariants.py  paths.py  promote.py  propose.py  research.py  verify.py
src/kavi/ledger/: __init__.py  db.py  models.py
src/kavi/llm/: spark.py
tests/: test_agent_chat_v0.py  test_artifacts.py  test_build_invoke.py  test_cli_search_format.py  test_consumer.py  test_consumer_chain.py  test_consumer_replay.py  test_consumer_session.py  test_doctor.py  test_execution_log.py  test_failure_drill.py  test_forge_flow.py  test_forge_paths.py  test_invariants.py  test_ledger.py  test_multi_turn_scenarios.py  test_policy_scanner.py  test_presenter.py  test_scenario_chat_surface.py  test_secret_governance.py  test_session_context.py  test_skill_create_daily_note.py  test_skill_http_get_json.py  test_skill_read_notes_by_tag.py  test_skill_search_notes.py  test_skill_summarize_note.py  test_skill_write_note.py  test_skills_index.py  test_skills_loader.py  test_spark_client.py  test_spark_live.py
(+14 files in other folders)
